lib_LIBRARIES = libdutils.a
INCLUDES=\
-I$(top_srcdir)/src/dutils \
-I$(top_srcdir)/src/include
libdutils_a_SOURCES=\
Logger.h \
Logsystem.h \
Mutex.h \
Object.h \
Thread.h \
Utils.h \
Logger.cpp \
Logsystem.cpp \
Mutex.cpp \
Object.cpp \
Thread.cpp \
Utils.cpp 
libdutils_a_CXXFLAGS=$(CXXFLAGS) -O3
libdutils_a_LDDFLAGS=$(LDFLAGS) -O3
